--- a/style.css
+++ b/style.css
@@ -11,9 +11,9 @@
     --text: 'Abel', sans-serif; 
     --title: 'Arquivo Blck', sans-serif; 
     --brown:#e1ad21; 
-    --brownlight-1:#f4c430; 
-    --brownlight-2:#ffdf00; 
-    --brownlight-3:#f8de7e; 
+    --brownlight-1:#c70003; 
+    --brownlight-2:#e20003; 
+    --brownlight-3:#ea2c2f; 
     --blue:#0a0120;
 } 
  
