--- a/style.css
+++ b/style.css
@@ -10,10 +10,10 @@
 :root{
     --text: 'Abel', sans-serif; 
     --title: 'Arquivo Blck', sans-serif; 
-    --brown:#e1ad21; 
+    --brown:#9a0001; 
     --brownlight-1:#c70003; 
     --brownlight-2:#e20003; 
-    --brownlight-3:#ea2c2f; 
+    --brownlight-3:#c3090c; 
     --blue:#0a0120;
 } 
  
